@Operation to all controller endpoints; Added new  exceptions to cover error cases