@@ -1,5 +1,7 @@
 package app.Twiter.service;
 
+import app.Twiter.advice.exception.DatabaseErrorException;
+import app.Twiter.advice.exception.InvalidDataException;
 import app.Twiter.advice.exception.UserNotFoundException;
 import app.Twiter.model.Follow;
 import app.Twiter.model.User;
@@ -9,8 +11,10 @@ import app.Twiter.repository.LikeRepo;
 import app.Twiter.repository.UserRepo;
 import app.Twiter.util.UserUtil;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.orm.jpa.vendor.Database;
 import org.springframework.stereotype.Service;
 import java.util.List;
+import java.util.concurrent.TimeoutException;
 import java.util.stream.Collectors;
 
 @Service
@@ -25,7 +29,7 @@ public class UserServiceImpl implements UserService{
 
     @Override
     public void registerUser(UserDTO userDTO) {
-        userRepo.save(userUtil.patchUserFromDTO(userDTO));
+         if(checkUserCreationIntegrity(userDTO))userRepo.save(userUtil.patchUserFromDTO(userDTO));
     }
 
     @Override
@@ -41,9 +45,11 @@ public class UserServiceImpl implements UserService{
 
     @Override
     public void updateUser(String id, UserDTO userDTO) {
-        User user=userUtil.patchUserFromDTO(userDTO);
-        user.setId(id);
-        userRepo.save(user); //if exists updates, else inserts
+        if(checkUserExists(id)) {
+            User user = userUtil.patchUserFromDTO(userDTO);
+            user.setId(id);
+            userRepo.save(user);
+        }
     }
 
     @Override
@@ -55,7 +61,10 @@ public class UserServiceImpl implements UserService{
 
     @Override
     public User getUserByID(String id) {
-        if(checkUserExists(id)) return userRepo.findById(id).get();
+        if(checkUserExists(id)) {
+            if(userRepo.findById(id).isEmpty()) throw new DatabaseErrorException("Data not recieved");
+            return userRepo.findById(id).get();
+        }
         else return null;
     }
 
@@ -64,15 +73,17 @@ public class UserServiceImpl implements UserService{
         return userRepo.findAll()
                 .stream()
                 .map(user -> userUtil.patchUserDTO(user))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<UserDTO> searchUserByName(String name) {
-        return userRepo.searchByUsernameOrFirstNameOrLastName(name)
+        List<UserDTO> results=userRepo.searchByUsernameOrFirstNameOrLastName(name)
                 .stream()
                 .map(user -> userUtil.patchUserDTO(user))
-                .collect(Collectors.toList());
+                .toList();
+        if(results.isEmpty()) throw new UserNotFoundException("No matching user found");
+        else return results;
     }
 
     @Override
@@ -95,4 +106,12 @@ public class UserServiceImpl implements UserService{
         else throw new UserNotFoundException("User with id:"+id+" not found");
     }
 
+    private boolean checkUserCreationIntegrity(UserDTO userDTO)throws  InvalidDataException{
+        if(userDTO.getUserName()==null) throw new InvalidDataException("userName is null");
+        else if(userDTO.getFirstName()==null) throw new InvalidDataException("firstName is null");
+        else if(userDTO.getLastName()==null) throw new InvalidDataException("lastName is null");
+        else if(userDTO.getEmail()==null) throw new InvalidDataException("email is null");
+        else if(userDTO.getPassword()==null) throw new InvalidDataException("password is null");
+        else return true;
+    }
 }
